# career_agent

./: .env.example  .gitignore  README.md  pyproject.toml
career_agent/: __init__.py  agents.py  ai_builder.py  cli.py  completeness.py  config.py  db.py  import_apply.py  merge.py  models.py  profile.py  prompts.py  repository.py
career_agent/ui/: app.py
career_agent/ui/templates/: base.html  experience_detail.html  experiences.html  open_questions.html  project_detail.html  workspace.html
career_agent/ui/templates/partials/: add_experience_form.html  add_project_form.html  center_leaves_edit.html  center_leaves_inner.html  center_leaves_read.html  center_overview_edit.html  center_overview_inner.html  center_overview_read.html  center_placeholder.html  center_tabs.html  completeness.html  (+5 more)
docs/superpowers/plans/: 2026-07-13-career-db-schema.md  2026-07-14-career-completeness-assistant.md  2026-07-14-career-workspace-ui.md  2026-07-14-career-workspace-visual-restyle.md  2026-07-14-workspace-resizable-columns.md  2026-07-16-project-tree-actions.md
docs/superpowers/specs/: 2026-07-13-career-db-schema-design.md  2026-07-14-career-completeness-assistant-design.md  2026-07-14-career-workspace-ui-design.md  2026-07-14-career-workspace-visual-restyle-design.md  2026-07-14-workspace-resizable-columns-design.md  2026-07-16-project-tree-actions-design.md
tests/: test_agent1_import.py  test_agent2_retrieve.py  test_cli_status.py  test_completeness.py  test_config.py  test_import_apply.py  test_merge.py  test_profile.py  test_repository.py  test_schema.py  test_ui.py
