[project]
name = "career-agent"
version = "0.1.0"
description = "Local-first AI career knowledge base and resume tailoring agents."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx2"]
ui = ["fastapi>=0.115", "uvicorn>=0.32", "jinja2>=3.1", "python-multipart>=0.0.9"]

[project.scripts]
career-agent = "career_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["career_agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
